@@ -45,7 +45,7 @@ public class AccessLogsService {
             String sort
     ) {
         int safePage = page == null ? 1 : Math.max(page, 1);
-        int safePageSize = pageSize == null ? 20 : Math.min(Math.max(pageSize, 1), MAX_LOG_PAGE_SIZE);
+        int safePageSize = pageSize == null ? 20 : Math.clamp(pageSize, 1, MAX_LOG_PAGE_SIZE);
         Pageable pageable = PageRequest.of(safePage - 1, safePageSize, parseSort(sort));
 
         final String kw = StringUtils.hasText(keyword) ? keyword.trim() : null;
