@@ -29,9 +29,9 @@ public class RagAutoSyncConfigService {
         if (payload == null) throw new IllegalArgumentException("payload is required");
         if (payload.getEnabled() == null) throw new IllegalArgumentException("enabled 不能为空");
         long interval = payload.getIntervalSeconds() == null ? 30 : payload.getIntervalSeconds();
-        interval = Math.max(5, Math.min(3600, interval));
+        interval = Math.clamp(interval, 5, 3600);
 
-        appSettingsService.upsertString(KEY_ENABLED, payload.getEnabled() ? "true" : "false");
+        appSettingsService.upsertString(KEY_ENABLED, payload.getEnabled().toString());
         appSettingsService.upsertString(KEY_INTERVAL_SECONDS, Long.toString(interval));
 
         RagAutoSyncConfigDTO out = new RagAutoSyncConfigDTO();
