@@ -16,7 +16,7 @@ final class RagAutoSyncSupport {
             return false;
         }
         long intervalMs = (cfg.getIntervalSeconds() == null ? 30 : cfg.getIntervalSeconds()) * 1000L;
-        intervalMs = Math.max(5000L, Math.min(3_600_000L, intervalMs));
+        intervalMs = Math.clamp(intervalMs, 5000L, 3_600_000L);
         long now = System.currentTimeMillis();
         long previous = lastRunAtMs.get();
         if (now - previous < intervalMs) {
@@ -30,21 +30,25 @@ final class RagAutoSyncSupport {
     }
 
     static Integer toInt(Object value) {
-        if (value == null) {
-            return null;
-        }
-        if (value instanceof Number number) {
-            return number.intValue();
-        }
-        if (value instanceof String text) {
-            String trimmed = text.trim();
-            if (trimmed.isBlank()) {
+        switch (value) {
+            case null -> {
                 return null;
             }
-            try {
-                return Integer.parseInt(trimmed);
-            } catch (NumberFormatException ignored) {
-                return null;
+            case Number number -> {
+                return number.intValue();
+            }
+            case String text -> {
+                String trimmed = text.trim();
+                if (trimmed.isBlank()) {
+                    return null;
+                }
+                try {
+                    return Integer.parseInt(trimmed);
+                } catch (NumberFormatException ignored) {
+                    return null;
+                }
+            }
+            default -> {
             }
         }
         return null;
